removed useless files, added a few new with dummy data, idk

--- a/client/src/app/components/element/menubar/menubar.component.html
+++ b/client/src/app/components/element/menubar/menubar.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-8 content menubar">
       <div class="row">
         <div class="col-sm">System</div>
-        <div class="col-sm highlight" routerLink="/projects">Projects</div>
+          <div class="col-sm highlight" routerLink="/appointments">Appointments</div>
         <div class="col-sm"></div>
         <div class="col-sm"></div>
         <div class="col-sm highlight" (click)="openUserProfileDialog()"> <img src="./favicon.ico"> {{getCurrentUser().getDisplayName()}}</div>
