--- a/client/src/app/components/page/app/app.component.html
+++ b/client/src/app/components/page/app/app.component.html
@@ -1,10 +1,12 @@
 <app-menubar></app-menubar>
-<div class="container-fluid">
-  <div class="row">
-    <div class="col"><!-- Left padding--></div>
-    <div class="col-md-10 col-xl-8">
-      <router-outlet></router-outlet>
+<div class="app-content">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col"><!-- Left padding--></div>
+      <div class="col-md-10 col-xl-8">
+        <router-outlet></router-outlet>
+      </div>
+      <div class="col"><!-- Right padding--></div>
     </div>
-    <div class="col"><!-- Right padding--></div>
   </div>
 </div>
