--- a/client/src/app/components/page/appointment-list/appointment-list.component.html
+++ b/client/src/app/components/page/appointment-list/appointment-list.component.html
@@ -5,20 +5,39 @@
       <div class="col-sm-12">
         <div class="center error">{{getErrorMessage()}}</div>
         <div class="center">
-          <table mat-table [dataSource]="getAppointmentData()">
+          <table mat-table [dataSource]="getAppointmentsData()">
             <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef>ID</th>
-              <td mat-cell *matCellDef="let appointment">{{appointment.getId()}}</td>
+              <th mat-header-cell *matHeaderCellDef>Identifier</th>
+              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentId()}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="appointmentTime">
-              <th mat-header-cell *matHeaderCellDef>Appointment Time</th>
+            <ng-container matColumnDef="date">
+              <th mat-header-cell *matHeaderCellDef>Date</th>
               <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentTime()}}</td>
             </ng-container>
 
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef>Status</th>
-              <td mat-cell *matCellDef="let appointment">{{appointment.getStatus()}}</td>
+              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getStatus()}}</td>
+            </ng-container>            
+
+            <ng-container matColumnDef="modify">
+              <th mat-header-cell *matHeaderCellDef>Last modified</th>
+              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getLastModified()}}</td>
+            </ng-container>            
+            
+            <ng-container matColumnDef="comment">
+              <th mat-header-cell *matHeaderCellDef>Comment</th>
+              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getComment()}}</td>
+            </ng-container>                        
+
+            <ng-container matColumnDef="actions">
+              <th mat-header-cell *matHeaderCellDef>Actions</th>
+              <td mat-cell *matCellDef="let appointment">
+                <button mat-icon-button (click)="openAppointmentEditDialog(appointment)">
+                  <mat-icon>edit</mat-icon>
+                </button>
+              </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="getColumns()"></tr>
@@ -30,6 +49,8 @@
             [pageSizeOptions]="[10, 25, 50]"
             showFirstLastButtons>
           </mat-paginator>
+
+          <button mat-raised-button color="primary" (click)="openAppointmentNewDialog()">Create appointment</button>
         </div>
       </div>
     </div>
