--- a/client/src/app/components/element/menubar/menubar.component.html
+++ b/client/src/app/components/element/menubar/menubar.component.html
@@ -4,7 +4,7 @@
     <div class="col-sm-8 content menubar">
       <div class="row">
         <div class="col-sm">CPHI Client</div>
-          <div class="col-sm highlight" routerLink="/appointments">Appointments</div>
+        <div class="col-sm"></div>
         <div class="col-sm"></div>
         <div class="col-sm"></div>
         <div class="col-sm highlight" (click)="openUserProfileDialog()">{{getCurrentUser().getDisplayName()}}</div>
