--- a/client/src/app/components/element/appointment-create-form/appointment-create-form.component.html
+++ b/client/src/app/components/element/appointment-create-form/appointment-create-form.component.html
@@ -2,11 +2,11 @@
     <div class="row">
         <div class="col">
             <h1 class="center">Create Appointment</h1>
-            <div class ="center error">{{getErrorMessage()}}</div>
-            <form spellcheck="false" class="center" [formGroup]="getAppointmentCreateForm()" (ngSubmit)="onAppointmentCreateFormSubmit()">
+            <div class ="center error">{{errorMessage}}</div>
+            <form spellcheck="false" class="center" [formGroup]="appointmentCreateForm" (ngSubmit)="onAppointmentCreateFormSubmit()">
                 <mat-form-field>
                     <mat-label>Date</mat-label>
-                    <input matInput type="text" autocomplete="off" formControlName="appointmentTime">
+                    <input matInput type="text" autocomplete="off" formControlName="appointmentTime" placeholder="2000-01-01">
                 </mat-form-field>
                 <button mat-raised-button color="primary" type="submit">Create Appointment</button>
             </form>
