--- a/client/src/app/components/page/appointment-list/appointment-list.component.html
+++ b/client/src/app/components/page/appointment-list/appointment-list.component.html
@@ -3,9 +3,9 @@
     <div class="col">
       <h1 class="center">Appointments</h1>
       <div class="col-sm-12">
-        <div class="center error">{{getErrorMessage()}}</div>
+        <div class="center error">{{errorMessage}}</div>
         <div class="center">
-          <table mat-table [dataSource]="getAppointmentsData()">
+          <table mat-table [dataSource]="appointmentsData">
             <ng-container matColumnDef="id">
               <th mat-header-cell *matHeaderCellDef>Identifier</th>
               <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentId()}}</td>
@@ -19,29 +19,19 @@
             <ng-container matColumnDef="status">
               <th mat-header-cell *matHeaderCellDef>Status</th>
               <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getStatus()}}</td>
-            </ng-container>            
-
-            <ng-container matColumnDef="modify">
-              <th mat-header-cell *matHeaderCellDef>Last modified</th>
-              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getLastModified()}}</td>
-            </ng-container>            
-            
-            <ng-container matColumnDef="comment">
-              <th mat-header-cell *matHeaderCellDef>Comment</th>
-              <td mat-cell *matCellDef="let appointment">{{appointment.getAppointmentStatusInfo().getComment()}}</td>
-            </ng-container>                        
+            </ng-container>               
 
             <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef>Actions</th>
               <td mat-cell *matCellDef="let appointment">
-                <button mat-icon-button *ngIf="isEditable(appointment)" (click)="openAppointmentEditDialog(appointment)">
+                <button mat-icon-button *ngIf="isEditable(appointment)" (click)="closeAppointment(appointment)">
                   <mat-icon>edit</mat-icon>
                 </button>
               </td>
             </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="getColumns()"></tr>
-            <tr mat-row *matRowDef="let row; columns: getColumns();"></tr>
+            <tr mat-header-row *matHeaderRowDef="columns"></tr>
+            <tr mat-row *matRowDef="let row; columns: columns;"></tr>
           </table>
           <mat-paginator
             #paginator
@@ -56,12 +46,12 @@
           </ng-container>   
 
           <ng-container
-            *ngIf="isAdmin(); then adminBottom; else userBottom">
+            *ngIf="isAdmin; then adminBottom; else userBottom">
           </ng-container>
 
           <ng-template #adminBottom>
             <div>
-              <form spellcheck="false" [formGroup]="getSearchForm()">
+              <form spellcheck="false" [formGroup]="searchForm">
                 <mat-form-field>
                   <mat-label>Id</mat-label>
                   <input matInput type="text" formControlName="pattern" autocomplete="false">
