--- a/client/src/styles/global-style.css
+++ b/client/src/styles/global-style.css
@@ -2,6 +2,7 @@
 
 body {
     background-color: #f0f2f5;
+    padding-top: 70px; /* Account for fixed navbar */
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
